--- a/src/Components/Dropdown/Dropdown.scss
+++ b/src/Components/Dropdown/Dropdown.scss
@@ -1,6 +1,5 @@
-/*=============================================
-=            Dropdown - General            =
-=============================================*/
+//Dropdown - General
+
 .dropdown {
   display: flex;
   flex-direction: column;
