--- a/src/Components/Banner/Banner.scss
+++ b/src/Components/Banner/Banner.scss
@@ -22,7 +22,7 @@
     min-height: 225px;
 
     &::before {
-      background-image: url("./../../../public/home_banner_img.png");
+      background-image: url("./../../../public/banner_home_image.png");
       background-position: center;
       background-size: cover;
     }
@@ -32,21 +32,22 @@
     min-height: 225px;
 
     &::before {
-      background-image: url("./../../../public/about_banner_img.png");
+      background-image: url("./../../../public/banner_about_image.png");
       background-position: center;
       background-size: cover;
     }
   }
 
-  &__txt {
+  &__text {
     font-size: 48px;
     line-height: 142.6%;
     color: white;
     font-weight: 500;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
   }
 
   @media all and (min-width: 0px) and (max-width: 768px) {
-    &__txt {
+    &__text {
       font-size: 24px;
       line-height: 100%;
     }
