--- a/src/Components/TagValue/TagValue.scss
+++ b/src/Components/TagValue/TagValue.scss
@@ -1,10 +1,11 @@
-.tagName__container {
+.tagValue__container {
   list-style: none;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
+
 .tag {
   background-color: #ff6060;
   color: white;
@@ -18,19 +19,22 @@
   justify-content: center;
   transition: all 0.3s;
   cursor: pointer;
-}
-.tag:hover {
-  filter: brightness(92%);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-@media (max-width: 768px) {
-  .tagName {
-    justify-content: center;
+
+  &:hover {
+    filter: brightness(92%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
-  .tag {
+
+  @media (max-width: 768px) {
     font-size: 10px;
     padding: 3px 6px;
     border-radius: 5px;
     min-width: 84px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tagValue {
+    justify-content: center;
   }
 }
