--- a/src/Pages/Error/Error.scss
+++ b/src/Pages/Error/Error.scss
@@ -1,3 +1,6 @@
+$primary-color: #ff6060;
+$secondary-color: #000000;
+
 .error {
   display: flex;
   flex-direction: column;
@@ -6,7 +9,7 @@
     font-weight: 700;
     font-size: 288px;
     text-align: center;
-    color: #ff6060;
+    color: $primary-color;
   }
 
   &__paragraph {
@@ -14,7 +17,7 @@
     font-size: 36px;
     line-height: 142.6%;
     text-align: center;
-    color: #ff6060;
+    color: $primary-color;
     padding-bottom: 50px;
   }
 
@@ -22,7 +25,7 @@
     font-size: 18px;
     line-height: 142.6%;
     text-align: center;
-    color: #ff6060;
+    color: $secondary-color;
     padding-bottom: 50px;
   }
 }
