perf:webp images

--- a/src/Components/Banner/Banner.scss
+++ b/src/Components/Banner/Banner.scss
@@ -22,7 +22,7 @@
     min-height: 225px;
 
     &::before {
-      background-image: url("./../../../public/banner_home_image.png");
+      background-image: url("./../../../public/banner_home_image_small.webp");
       background-position: center;
       background-size: cover;
     }
@@ -32,7 +32,7 @@
     min-height: 225px;
 
     &::before {
-      background-image: url("./../../../public/banner_about_image.png");
+      background-image: url("./../../../public/banner_about_image_small.webp");
       background-position: center;
       background-size: cover;
     }
