--- a/src/Components/Dropdown/Dropdown.scss
+++ b/src/Components/Dropdown/Dropdown.scss
@@ -1,4 +1,4 @@
-//Dropdown - General
+// Dropdown - General
 
 .dropdown {
   display: flex;
@@ -79,9 +79,8 @@
   }
 }
 
-/*=============================================
-=            Dropdown - About Page            =
-=============================================*/
+// Dropdown -  Page "About"
+
 .dropdown__button--about {
   font-size: 24px;
 
@@ -110,9 +109,8 @@
   }
 }
 
-/*=============================================
-=            Dropdown - Logement Page        =
-=============================================*/
+// Dropdown - Page "Logement"
+
 .dropdown__button--logement {
   font-size: 18px;
 
