--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -20,7 +20,7 @@ $primary_color: white;
     }
   }
 
-  &__content__title {
+  &__title {
     font-weight: 500;
     font-size: 18px;
     line-height: 142.6%;
