--- a/src/Components/Carousel/Carousel.scss
+++ b/src/Components/Carousel/Carousel.scss
@@ -20,7 +20,7 @@ $primary_color: white;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    color: $primary_color;
+    color: #000;
     font-size: 18px;
     z-index: 1000;
   }
